exports[`AnswerOption has a string containing the answer option text 1`] = `
<div
  className="row answer_option pollListing uneditable">
  <div
    className="col-xs-4 col-sm-4 col-md-2">
    <button
      className="btn btn-default"
      data-placement="bottom"
      data-toggle="tooltip"
      disabled={false}
      onClick={[Function bound vote]}
      onMouseOut={[Function bound onButtonMouseOut]}
      onMouseOver={[Function bound onButtonMouseIn]}
      title="Click to Vote"
      type="button">
      Vote
    </button>
  </div>
  <div
    className="col-xs-8 col-sm-8 col-md-10">
    <div>
      Cuddly
    </div>
  </div>
</div>
`;

exports[`AnswerOptionsBox It contains an AnswerOptionsList with all of the existing answer_options 1`] = `
<div>
  <div
    className="answer_options_list">
    <div
      className="row answer_option pollListing uneditable">
      <div
        className="col-xs-4 col-sm-4 col-md-2">
        <button
          className="btn btn-default"
          data-placement="bottom"
          data-toggle="tooltip"
          disabled={false}
          onClick={[Function bound vote]}
          onMouseOut={[Function bound onButtonMouseOut]}
          onMouseOver={[Function bound onButtonMouseIn]}
          title="Click to Vote"
          type="button">
          Vote
        </button>
      </div>
      <div
        className="col-xs-8 col-sm-8 col-md-10">
        <div>
          Cuddly
        </div>
      </div>
    </div>
    <div
      className="row answer_option pollListing uneditable">
      <div
        className="col-xs-4 col-sm-4 col-md-2">
        <button
          className="btn btn-default"
          data-placement="bottom"
          data-toggle="tooltip"
          disabled={false}
          onClick={[Function bound vote]}
          onMouseOut={[Function bound onButtonMouseOut]}
          onMouseOver={[Function bound onButtonMouseIn]}
          title="Click to Vote"
          type="button">
          Vote
        </button>
      </div>
      <div
        className="col-xs-8 col-sm-8 col-md-10">
        <div>
          Cute
        </div>
      </div>
    </div>
  </div>
  <div
    className="form-group  has-error">
    <div
      className="row answer_option pollListing editable vertical-spacing">
      <div
        className="col-xs-12 col-sm-12 col-md-12">
        <input
          className="form-control vertical-spacing form-control-error"
          disabled={null}
          onChange={[Function mapVotesToAnswerOptions]}
          onKeyPress={[Function bound handleKeyPress]}
          placeholder="Enter a new poll answer option here"
          type="text"
          value="" />
      </div>
    </div>
    <div
      className="row answer_option pollListing editable vertical-spacing">
      <div
        className="col-xs-12 col-sm-12 col-md-3">
        <button
          className="form-group btn btn-primary"
          disabled={true}
          onClick={[Function mapVotesToAnswerOptions]}
          type="button">
          Add Answer Option
        </button>
      </div>
      <div
        className="col-xs-12 col-sm-12 col-md-9">
        <div
          className="form-control-feedback">
          Test message.
        </div>
      </div>
    </div>
  </div>
</div>
`;
